--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,32 @@
-# TO BE RELEASED
+  version: "3.8"
+services:
+    auth-service:
+        build: ./auth-service
+        container_name: auth-service
+        restart:  on-failure
+        ports:
+            - "80:80"
+        networks:
+            bearchat:
+                ipv4_address:
+                    172.28.1.1
+        depends_on:
+          - db-server
+
+        expose:
+            - '80'
+
+        db-server:
+            build: ./db-server
+            container_name: db-server
+            restart:  on-failure
+            ports:
+                - "3306:3306"
+            env_file:
+                - ./db-server/database.env
+            networks:
+                bearchat:
+                    ipv4_address:
+                        172.28.1.2
+            expose:
+                - '3306'
