--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,17 +16,40 @@ services:
         expose:
             - '80'
 
-        db-server:
-            build: ./db-server
-            container_name: db-server
+    db-server:
+        build: ./db-server
+        container_name: db-server
+        restart:  on-failure
+        ports:
+            - "3306:3306"
+        env_file:
+            - ./db-server/database.env
+        networks:
+            bearchat:
+                ipv4_address:
+                    172.28.1.2
+        expose:
+            - '3306'
+
+    posts-service:
+            build: ./posts
+            container_name: posts-service
             restart:  on-failure
             ports:
-                - "3306:3306"
-            env_file:
-                - ./db-server/database.env
+                - "81:80"
             networks:
                 bearchat:
                     ipv4_address:
-                        172.28.1.2
+                        172.28.1.3
+            depends_on:
+            - db-server
+
             expose:
-                - '3306'
+                - '80'
+
+networks:
+    bearchat:
+        ipam:
+            config:
+                - subnet: 172.28.1.0/16
+                
