--- a/db-server/Dockerfile
+++ b/db-server/Dockerfile
@@ -1,7 +1,8 @@
 # What image are we pulling? What version do we want?
 # FROM <YOUR CODE HERE>
-
+FROM mysql:latest
 COPY initdb.sql /docker-entrypoint-initdb.d/
 
 # What is the default MySQL port?
 # EXPOSE <YOUR CODE HERE> 
+EXPOSE 3306
