--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,17 +16,23 @@ services:
         expose:
             - '80'
 
-        db-server:
-            build: ./db-server
-            container_name: db-server
-            restart:  on-failure
-            ports:
-                - "3306:3306"
-            env_file:
-                - ./db-server/database.env
-            networks:
-                bearchat:
-                    ipv4_address:
-                        172.28.1.2
-            expose:
-                - '3306'
+    db-server:
+        build: ./db-server
+        container_name: db-server
+        restart:  on-failure
+        ports:
+            - "3306:3306"
+        env_file:
+            - ./db-server/database.env
+        networks:
+            bearchat:
+                ipv4_address:
+                    172.28.1.2
+        expose:
+            - '3306'
+
+networks:
+    bearchat:
+        ipam:
+            config:
+                - subnet: 172.28.1.0/16
