--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,22 @@ services:
         expose:
             - '3306'
 
+    # posts-service:
+    #         build: ./posts
+    #         container_name: posts-service
+    #         restart:  on-failure
+    #         ports:
+    #             - "81:80"
+    #         networks:
+    #             bearchat:
+    #                 ipv4_address:
+    #                     172.28.1.3
+    #         depends_on:
+    #         - db-server
+
+    #         expose:
+    #             - '80'
+
 networks:
     bearchat:
         ipam:
